--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -3,6 +3,12 @@ on:
   pull_request:
     types:
       - opened 
+  push:
+    branches:
+      - main
+      - 'dev*'
+    paths-ignore:
+      - '.github/workflows/*'
   workflow_dispatch:
 jobs:
   deploy:
