--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches:
       - main
-      - 'dev*'
+      - 'dev-*'
     paths-ignore:
       - '.github/workflows/*'
   workflow_dispatch:
