--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -6,8 +6,8 @@ on:
   push:
     branches:
       - main
-      - 'dev-*'
-    paths-ignore:
+      - 'dev*'
+    paths:
       - '.github/workflows/*'
   workflow_dispatch:
 jobs:
